# clip-plot

./: .gitignore  .pre-commit-config.yaml  00_main.html  01_utils.html  02_compare.html  09_configuration.html  10_embed_to_tables.html  11_tables_to_viewer.html  12_hotspots.html  FEATURE_FLAGS.md  LICENSE  LICENSE_Addl_Yale  MANIFEST.in  MODERNIZATION_PLAN.md  README.md  clip_plot.html  embeddings.html  from_tables.html  images.html  index.html  layouts.html  main.py  metadata.html  pipelines.html  pyproject-nbdev-migrate.toml  pyproject.toml  robots.txt  search.json  settings.ini  setup.py  sitemap.xml  uv.toml  web_config.html
.github/workflows/: build-annoy-wheels.yaml  release-no-publish  release-no-publish.yml  vendor-annoy-wheel.yaml
_downloaded_wheels/: annoy-1.17.3-cp310-cp310-linux_x86_64.whl  annoy-1.17.3-cp311-cp311-linux_x86_64.whl  annoy-1.17.3-cp312-cp312-linux_x86_64.whl  annoy-1.17.3-cp313-cp313-linux_x86_64.whl
_proc/: 00_clip_plot.ipynb  01_utils.ipynb  index.ipynb  nbdev.yml  sidebar.yml.bak
_proc/_docs/: index.html  robots.txt
clip_plot/: _modidx.py  clip_plot.py  compare.py  config.py  configuration.py  embed_to_tables.py  embeddings.py  from_table.py  from_tables.py  hotspots.py  images.py  layouts.py  main.py  metadata.py  pipelines.py  printme.py  reducers.py  tables_to_viewer.py  to_emb_atlas.py  utils.py  uv.toml  web_config.py
clip_plot/web/: index.html
clipplot/: __init__.py
clipplot_legacy/: __init__.py  clipplot.py
clipplot_legacy/web/: index.html
nbs/: 00_clip_plot.ipynb  00_main.ipynb  01_clip_plot.ipynb  01_utils.ipynb  02_compare.ipynb  03_images.ipynb  04_embeddings.ipynb  05_layouts.ipynb  06_web_config.ipynb  07_metadata.ipynb  08_from_tables.ipynb  09_configuration.ipynb  10_embed_to_tables.ipynb  11_tables_to_viewer.ipynb  12_hotspots.ipynb  13_pipelines.ipynb  14_to-emb-atlas.ipynb  15_reducers.ipynb  index.ipynb  nbdev.yml  sidebar.yml
src/: pyproject.toml
tests/: check-nb-format.py  tests-to-do.md  two-step-buncha-jpgs.py  two-step-pipeline.py  two-step-to-atlas.py
(+132 files in other folders)
