[project]
name="clip-plot"
version = "0.1.1a6"
description = "Visual-similarity-space viewer for images"
readme = "README.md"
license = "MIT"
requires-python=">=3.10"
dependencies = [
    "fastcore>=1.8",
    "hdbscan",
    "matplotlib>=3.10.0",
    "pandas>=2.2.3",
    "pillow>=11.1.0",
    "pyarrow",
    "pointgrid",
    "rasterfairy",
    "timm",
    "torch",
    "torchvision",
    "transformers",
    "umap-learn",
]
	
[project.urls]
repository = "https://github.com/fr1ll/clip-plot"
documentation = "https://github.com/fr1ll/clip-plot"
homepage = "https://github.com/fr1ll/clip-plot"

[project.scripts]
clipplot_from_images = "clip_plot.clip_plot:project_images_cli"
clipplot_embed_images = "clip_plot.clip_plot:embed_images_cli"

[tool.uv]
package = true
dev-dependencies = [
    "clip-plot",
    "ipykernel",
    "nbdev>=2.3.31",
    "nbqa>=1.9.0",
    "pre-commit>=4.3.0",
    "ruff>=0.6.8",
    "setuptools>=75.2.0",
    # Needed by `nbdev`, but undeclared
]

[tool.uv.sources]
bedmap = { workspace = true }
rasterfairy = { url = "https://github.com/fr1ll/RasterFairy_WheelBuild/releases/download/v1.0.5a/rasterfairy-1.0.5a0-py3-none-any.whl" }
pointgrid = { url = "https://github.com/fr1ll/pointgrid/releases/download/0.0.6/pointgrid-0.0.6-py3-none-any.whl"}
torch = [ { index = "pytorch-cpu" },]
torchvision = [ { index = "pytorch-cpu" },]

[[tool.uv.index]]
name="clip-plot"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.build-backend]
module-name = "clip_plot"
module-root = ""
data = ["clip_plot/web"]

[tool.ruff]
line-length = 120
target-version = "py312"
output-format = "concise"  # Works better for CI

[tool.ruff.lint]
select = ["E", "F", "W", "I", "PD", "PERF", "UP", "C4"]

[tool.ruff.lint.isort]
known-first-party = ["bedmap"]

[tool.ruff.lint.per-file-ignores]
# Ignore `E402` (import violations) in all `*.ipynb` files.
# Reason: nbdev typically does nbdev_export at the end of notebooks
"*.ipynb" = ["E402"]
